Improved responsiveness on mobile, IOS video autoplay fix attempt

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -356,6 +356,7 @@ input[type="number"] {
     width: 100%;
     -webkit-animation: navbar-enter 1.15s ease;
             animation: navbar-enter 1.15s ease;
+    top: -1px;
 }
 
 @-webkit-keyframes navbar-enter {
